Change styles to fix distorted avatar image

--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -101,6 +101,9 @@
           width: 30px
           height: 30px
           border-radius: 50%
+          overflow: hidden
+          object-fit: cover
+
         span
           padding: 0
           margin-left: 5px
