--- a/client/src/components/UserInfo/UserInfo.module.sass
+++ b/client/src/components/UserInfo/UserInfo.module.sass
@@ -36,6 +36,7 @@
       width: 140px
       height: 140px
       margin: 40px 0
+      object-fit: cover
     .infoBlock
       display: flex
       flex-direction: row
